<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="40dp"
    android:scaleType="fitCenter">

    <ImageView
        android:layout_width="@dimen/profile_imgview_width"
        android:layout_height="@dimen/profile_imgview_height"
        android:layout_gravity="center_horizontal|center_vertical"
        android:src="@drawable/ic_logo_3" />

    <TextView
        style="@style/titleAvenirFontWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblprofile"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/secondTitleAvenirFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu2"
            android:text="@string/lblstatus"
            android:padding="2dp"
            android:paddingStart="@dimen/profile_paddingStart"
            android:password="false" />

        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu2"
            android:hint="@string/lblstatus"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="3dp"
            android:paddingStart="@dimen/profile_paddingStart"
            android:password="false" />
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/secondTitleAvenirFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu2"
            android:text="@string/lblname"
            android:padding="3dp"
            android:paddingStart="@dimen/profile_paddingStart"
            android:password="false" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu2"
            android:hint="@string/lblname"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="3dp"
            android:paddingStart="@dimen/profile_paddingStart"
            android:password="false" />/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/secondTitleAvenirFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu2"
            android:text="@string/lblemail"
            android:padding="3dp"
            android:paddingStart="@dimen/profile_paddingStart"
            android:password="false" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu2"
            android:hint="@string/lblemail"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="3dp"
            android:paddingStart="@dimen/profile_paddingStart"
            android:password="false" />/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            style="@style/secondTitleAvenirFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu2"
            android:text="@string/lblAreaDelivery"
            android:padding="3dp"
            android:paddingStart="@dimen/profile_paddingStart"
            android:password="false" />

        <TextView
            android:id="@+id/txtareadelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu2"
            android:hint="@string/lblAreaDelivery"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="3dp"
            android:paddingStart="@dimen/profile_paddingStart"
            android:password="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryToolBar"
            android:text="@string/save"
            android:textColor="@color/white"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/enter2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryToolBar"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:visibility="invisible"/>

    </LinearLayout>


</LinearLayout>