<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="225dp"
    android:clickable="true"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/cardlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/block1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/card_paddingBottom"
            android:paddingLeft="@dimen/card_paddingLeft_5"
            android:paddingRight="@dimen/card_paddingRight_5"
            android:paddingTop="@dimen/card_paddingTop">

            <TextView
                android:id="@+id/txtOrder"
                style="@style/title_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/order_text" />

            <TextView
                android:id="@+id/idorder"
                style="@style/title_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txtOrder"
                android:layout_toEndOf="@+id/txtOrder"
                android:layout_toRightOf="@+id/txtOrder"
                android:gravity="center_horizontal"
                android:text="@string/number"
                tool:visibility="visible"/>

            <TextView
                android:id="@+id/state"
                style="@style/secondTitleAvenirFont_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/white"
                android:paddingLeft="@dimen/card_paddingLeft_5"
                android:paddingRight="@dimen/card_paddingRight_5"
                android:text="@string/status" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/blockExtra"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/card_paddingBottom" />


        <RelativeLayout
            android:id="@+id/block40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/block3"
            android:paddingLeft="@dimen/card_paddingLeft"
            android:paddingRight="@dimen/card_paddingRight">

            <ImageView
                android:id="@+id/imgRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_pedidos_iconorestaurante_pink" />

            <TextView
                android:id="@+id/restaurant_name"
                style="@style/thirdTitleAvenirFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imgRestaurant"
                android:layout_toLeftOf="@+id/imgClock"
                android:text="Restaurante Royal India" />

            <ImageView
                android:id="@+id/imgClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/hourLeft"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_pedidos_horarecogida_pink"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/hourLeft"
                style="@style/thirdTitleAvenirFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="20min"
                android:visibility="visible"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/block3"
            android:paddingLeft="@dimen/card_paddingLeft"
            android:paddingRight="@dimen/card_paddingRight">

            <ImageView
                android:id="@+id/imgClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_client_white_rosa" />

            <TextView
                android:id="@+id/direction_client"
                style="@style/thirdTitleAvenirFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imgClient"
                android:layout_toLeftOf="@+id/imgBigOrder"
                android:text="Restaurante Royal India" />

            <ImageView
                android:id="@+id/imgBigOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_big3_72dp"
                android:visibility="gone"
                tool:visibility="visible"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/state_of_payment"
            style="@style/thirdTitleAvenirFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/state_of_payment"
            android:visibility="gone" />


    </LinearLayout>

</android.support.v7.widget.CardView>