<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="50dp"
    android:scaleType="fitCenter">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:src="@drawable/ic_logo_3" />
    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_marginTop"
        android:background="@color/colorMenu2">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:baselineAlignBottom="false"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="1dp"
            android:src="@drawable/ic_login_user" />
        <EditText
            android:id="@+id/user"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/user"  
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_marginTop"
        android:background="@color/colorMenu2">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_password" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_marginTop"
        android:background="@color/colorMenu2"
        android:visibility="gone">
    <Spinner
    android:id="@+id/state_area_delivery"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:gravity="center_vertical|center_horizontal"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    android:visibility="visible"
    android:spinnerMode="dialog"
    tool:visibility="visible"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_marginTop"
        android:background="@color/colorMenu2">

        <Spinner
            android:id="@+id/area_delivery"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:visibility="visible"
            android:spinnerMode="dialog"
            tool:visibility="visible"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="gravity"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryToolBar"
        android:text="@string/enter"
        android:textColor="@color/white" />
</LinearLayout>
